<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECFUN</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_quit">再按一次退出</string>
    <string name="menu_tx_name">未登录</string>
    <string name="register_phone_number">手机号</string>
    <string name="register_message">短信验证码</string>
    <string name="register_password">密码（6位以上）</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="register_send_verification_code">发送验证码</string>
    <string name="register_sign_up">注册</string>
    <string name="login_sign_in">登录</string>
    <string name="login_user_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_go_sign_up">还没有账号，去注册</string>
    <string name="forget_confirm">确认修改</string>
    <string name="forget_title">忘记密码</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="pulldown_scrollview">PulldownScrollView</string>
    <string name="stretch_scrollview">StretchScrollView</string>
    <string name="add_attention">加关注</string>
    <string name="user_post">xxx</string>
    <string name="user_book">xxx</string>
    <string name="user_name">昵称</string>
    <string name="user_des">这个人很懒，什么都没有留</string>
    
    <string name="menu_button_1">等级</string>
    <string name="menu_button_2">圈子</string>
    <string name="menu_button_3">运动</string>
    <string name="menu_button_4">广场</string>
    <string name="menu_button_5">扫一扫</string>
    <string name="menu_button_6">关于</string>
    
    <string name="viewpager_indicator">%1$d/%2$d</string>
    
    
     <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string> 
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>

</resources>